# whatyadoin-

./: .env.example  .gitignore  README.md  buggy.py  pyproject.toml  requirements.txt
tests/: test_autofix.py  test_db.py  test_diagnose.py  test_gather.py  test_mistakes.py  test_runner.py  test_stt.py
voicefix/: __init__.py  __main__.py  audio.py  db.py  diagnose.py  stt.py
whatyoudoin/: __init__.py  __main__.py  audio.py  db.py  diagnose.py  mistakes.py  runner.py  stt.py
